--- a/LibraryManagment.Web/Views/Shared/_Layout.cshtml
+++ b/LibraryManagment.Web/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
     <meta name="viewport"
           content="width=device-width,
                    initial-scale=1.0">
-    <title>Bootstrap5 Sidebar</title>
+    <title>Library Management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
@@ -94,9 +94,20 @@
                     </a>
                 </li>
                 <li class="nav-item mb-1">
-                    <a href="#">
-                        <i class="fa-regular fa-newspaper"></i>
-                        Articles
+                    <a href="/Book/index">
+                        <i class="fa-solid fa-book"></i>
+
+                        @* <i class="fa-regular fa-newspaper"></i> *@
+                        Book
+                    </a>
+                </li>
+                <li class="nav-item mb-1">
+                    <a href="/Publisher/index">
+                        <i class="fa-solid fa-book"></i>
+
+
+                        @* <i class="fa-regular fa-newspaper"></i> *@
+                        Publisher
                     </a>
                 </li>
                 <li class="nav-item mb-1">
@@ -147,7 +158,7 @@
                 </li>
             </ul>
             <hr>
-            <div class="d-flex">
+          @*   <div class="d-flex">
 
                 <i class="fa-solid fa-book  me-2"></i>
                 <span>
@@ -155,7 +166,7 @@
                         Geeks for Geeks Learning Portal
                     </h6>
                 </span>
-            </div>
+            </div> *@
         </div>
 
         <div class="bg-light flex-fill">
