--- a/LibraryManagment.Web/Views/Shared/_Layout.cshtml
+++ b/LibraryManagment.Web/Views/Shared/_Layout.cshtml
@@ -80,19 +80,24 @@
             </a><hr>
             <ul class="mynav nav nav-pills flex-column mb-auto">
                 <li class="nav-item mb-1">
-                    <a href="/Home/Privacy">
+                    <a href="/Author/Index">
                         <i class="fa-regular fa-user"></i>
-                        Profile
+                        Author
                     </a>
                 </li>
-
                 <li class="nav-item mb-1">
+                    <a href="/Member/Index">
+                        <i class="fa-regular fa-user"></i>
+                        Member
+                    </a>
+                </li>
+@*                 <li class="nav-item mb-1">
                     <a href="#">
                         <i class="fa-regular fa-bookmark"></i>
                         Saved Articles
                         <span class="notification-badge">5</span>
                     </a>
-                </li>
+                </li> *@
                 <li class="nav-item mb-1">
                     <a href="/Book/index">
                         <i class="fa-solid fa-book"></i>
@@ -110,12 +115,12 @@
                         Publisher
                     </a>
                 </li>
-                <li class="nav-item mb-1">
+              @*   <li class="nav-item mb-1">
                     <a href="#">
                         <i class="fa-solid fa-archway"></i>
                         Institutions
                     </a>
-                </li>
+                </li> *@
                 <li class="nav-item mb-1">
                     <a href="#">
                         <i class="fa-solid fa-graduation-cap"></i>
