--- a/LibraryManagment.Web/Views/Shared/_Layout.cshtml
+++ b/LibraryManagment.Web/Views/Shared/_Layout.cshtml
@@ -115,6 +115,13 @@
                         Publisher
                     </a>
                 </li>
+                <li class="nav-item mb-1">
+                    <a href="/Transaction/index">
+                        <i class="fa-solid fa-book"></i>
+                        @* <i class="fa-regular fa-newspaper"></i> *@
+                        Transaction
+                    </a>
+                </li>
               @*   <li class="nav-item mb-1">
                     <a href="#">
                         <i class="fa-solid fa-archway"></i>
@@ -201,3 +208,7 @@
 </body>
 
 </html>
+<script src="~/js/jquery/jquery.js"></script>
+<script src="~/lib/toastr.js/toastr.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
